# UAV_3D_reconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nodelets.xml  package.xml
cache_nodes/: CMakeLists.txt  README.md  package.xml
cache_nodes/action/: ReevaluateAction.action
cache_nodes/config/: config.yaml  config_geo.yaml  config_multi.yaml
cache_nodes/include/: evaluator.h
cache_nodes/include/cache_nodes/: cached.h  cached_multi.h  geo_cached.h
cache_nodes/launch/: cache.launch  cache_geo.launch  cache_multi.launch
cache_nodes/msg/: Node.msg
cache_nodes/nodes/: cache.py
cache_nodes/src/: cached.cpp  cached_multi.cpp  cached_multi_node.cpp  cached_node.cpp  evaluator.cpp  geo_cached.cpp  geo_cached_node.cpp  kd_tree_gain.cpp
cache_nodes/srv/: BestNode.srv
cached_nodes/: package.xml
cached_nodes/config/: config.yaml
cached_nodes/include/: RTree.h  evaluator.h  kd_tree_gain.h
cached_nodes/nodes/: gp.py
cached_nodes/src/: cached.cpp
motion_planning/: CMakeLists.txt  README.md  package.xml  package_cpp_python.txt
motion_planning/config/: AEPlanner.yaml  AEPlannerReal.yaml  BigMaze.yaml  GAEPlanner.yaml  House.yaml  ImprovedKAEPlanner.yaml  KinoAEPlanner.yaml  KinoAEPlannerReal.yaml  KinoNBVplanner.yaml  KinoNBVplannerReal.yaml  Lamp.yaml  NBVPlanner.yaml  NBVplannerReal.yaml  motion_planner.yaml
motion_planning/include/motion_planning_python/: gain_evaluator.h  gain_evaluator_2D.h
motion_planning/launch/: cam_to_ptcld.launch  experiment_starter.launch  launch_rviz.launch  post_process_plot_real.launch  post_process_pointcloud.launch  post_process_real.launch  process_pointcloud.launch  replay_rosbag.launch  rqt_plot_velocity.launch  rviz.launch  tf_realsense_connect.launch
motion_planning/launch/AEP/: AEPlanner.launch
motion_planning/launch/GAEP/: GAEPlanner.launch
motion_planning/launch/ImprovedKAEP/: ImprovedKAEPlanner.launch
motion_planning/launch/KinoAEP/: KinoAEPlanner.launch
motion_planning/launch/KinoAEPReal/: KinoAEPlannerReal.launch
motion_planning/launch/KinoNBV/: KinoNBVPlanner.launch
motion_planning/launch/KinoNBVReal/: KinoNBVPlannerReal.launch
motion_planning/launch/NBV/: NBVPlanner.launch  motion_planner.launch
motion_planning/launch/auxiliar/: camera_parameters.launch  create_world.launch
motion_planning/launch/evaluate/: full_voxblox_eval.launch  voxblox_eval.launch  voxblox_gt.launch
motion_planning/launch/voxblox/: pointcloud_conversion.launch  post_process.launch  post_processed_voxblox.launch  processed_voxblox.launch  voxblox.launch  voxblox_multi_drone.launch
motion_planning/scripts/: cam_to_ptcld.py  decompress.py  refactor_rviz_config.sh  rviz_bbx.py  smoothness_calculation.py  trajectory.py  trajectory_log.txt  trajectory_smoothness.py
motion_planning/scripts/rrt_star/: prm_2d.py  rrt_star.py  rrt_star_2d.py  rrt_star_2d_area.py  rrt_star_2d_yaw.py  rrt_star_animated.py
motion_planning/src/: camera_parameters.cpp  gain_evaluator.cpp
motion_planning/src/AEP/: AEPlanner.cpp  AEPlanner_node.cpp
motion_planning/src/AEPReal/: AEPlannerReal_node.cpp
motion_planning/src/GAEP/: GAEPlanner.cpp  GAEPlanner_node.cpp
motion_planning/src/ImprovedKAEP/: ImprovedKAEPlanner.cpp  ImprovedKAEPlanner_node.cpp
motion_planning/src/KinoAEP/: KinoAEPlanner.cpp  KinoAEPlanner_node.cpp
motion_planning/src/KinoNBV/: KinoNBVplanner.cpp  KinoNBVplanner_node.cpp
motion_planning/src/KinoNBVReal/: KinoNBVplannerReal.cpp  KinoNBVplannerReal_node.cpp
motion_planning/src/NBV/: NBVMultiplanner_node.cpp  NBVplanner.cpp  NBVplanner_2D.cpp  NBVplanner_node.cpp
motion_planning/src/NBVReal/: NBVplannerReal.cpp  NBVplannerReal_node.cpp
motion_planning/src/NBV_Backup/: NBVplanner_backup.cpp
motion_planning/src/RRT/: kino_rrt_star_kd.cpp
motion_planning/src/evaluate/: eval_computation_time.py  eval_data_node_real.py  eval_plotting_node.py  eval_voxblox_node.cpp
motion_planning/tmux/: outputfile.txt
motion_planning/tmux/one_drone/: multi_start.sh  session.yml
motion_planning/tmux/one_drone_real/: mavros_tmux.sh  mavros_tmux_aep_baseline.sh  record.sh  session.yml
motion_planning/tmux/three_drones/: kill.sh  session.yml
motion_planning_real_world/: CMakeLists.txt  README.md  package.xml
motion_planning_real_world/config/: AEPlannerReal.yaml  KinoAEPlannerReal.yaml  KinoNBVplannerReal.yaml  NBVplannerReal.yaml
motion_planning_real_world/launch/: process_pointcloud_deactivated.launch  processed_voxblox.launch  tf_realsense_connect_mavros.launch
motion_planning_real_world/launch/AEPReal/: AEPlannerReal.launch
motion_planning_real_world/launch/NBVReal/: NBVPlannerReal.launch
motion_planning_real_world/scripts/: rviz_bbx.py  tf_filter.py  trajectory.py
motion_planning_real_world/src/: mavros_tf_broadcaster.cpp
multi_motion_planning/: CMakeLists.txt  README.md  package.xml
multi_motion_planning/config/: AEPMultiplanner.yaml  KinoAEPMultiplanner.yaml  KinoNBVPMultiplanner.yaml  NBVMultiplanner.yaml
multi_motion_planning/launch/: KinoAEPlannerMulti.launch  MultiExperimentStarter.launch  NBVPlannerMulti.launch  ProcessFullPointclouds.launch  combined_voxblox.launch  multi_voxblox.launch
multi_motion_planning/src/: AEPMultiplanner.cpp  KinoAEPMultiplanner.cpp  KinoAEPMultiplanner_node.cpp  KinoNBVPMultiplanner.cpp  NBVMultiplanner.cpp  kd_tree.cpp
multiagent_collision_check/: CMakeLists.txt  README.md
multiagent_collision_check/msg/: Segment.msg
multiagent_collision_check/src/: multiagent_collision_checker.cpp
pcl_tools/: CMakeLists.txt  README.md  nodelets.xml
pcl_tools/config/: freespace_pc.yaml
process_pointcloud/: CMakeLists.txt  README.md  package.xml
process_pointcloud/include/: process_pointcloud.h
process_pointcloud/launch/: process_pointcloud.launch
process_pointcloud/src/: process_pointcloud.cc  process_pointcloud_node.cc  prune.cc
rrt_construction/: CMakeLists.txt  README.md  package.xml
rrt_construction/config/: GainConfig.yaml
rrt_construction/src/: gain_evaluator.cpp  geo_rrt_kd.cpp  improved_krrt_kd.cpp  kd_tree.cpp  kino_rrt_star_kd.cpp  rrt_star_kd.cpp
(+572 files in other folders)
