<?xml version="1.0"?>
<package format="2">

  <name>motion_planning_python</name>
  <version>1.0.0</version>
  <description>The Python Example for Sweeping Generator</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_ros</depend>

  <export>
  </export>

</package>
