<?xml version="1.0"?>
<package format="2">

  <name>pcl_tools</name>
  <version>1.0.0</version>
  <description>Pointcloud tools package</description>

  <maintainer email="joao.felix.mendes@tecnico.ulisboa.pt">Joao Mendes</maintainer>
  <author email="joao.felix.mendes@tecnico.ulisboa.pt">Joao Mendes</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_modules_msgs</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
