<?xml version="1.0"?>
<package format="2">
  <name>cache_nodes</name>
  <version>0.0.1</version>
  <description>The cache package</description>

  <maintainer email="joao.felix.mendes@tecnico.ulisboa.pt">Joao Mendes</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>mrs_msgs</depend>

  <depend>roscpp</depend>
  <depend>mrs_lib</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_generation</depend>
  <depend>voxblox_ros</depend>
  <depend>rrt_construction</depend>
  <depend>minkindr_conversions</depend>

  <export>
  </export>

</package>
